--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav class="mainmenu" id="mainmenu">
-    <h1 class = "main-title">Проклятие Дакмуна</h1>
+    <h1 class = "main-title">Проклятие Дакмуна git</h1>
     <ul class="mainmenu__list">
       <li><a class="mainmenu__link" id="mainLink" href="#">Начать игру
         <svg>
